# VectorGL

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md  imgui.ini
includes/: camera.hpp  cubemap.hpp  entity.hpp  lightManager.hpp  logger.hpp  main.hpp  material.hpp  mesh.hpp  model.hpp  renderObject.hpp  renderTarget.hpp  renderer.hpp  scene.hpp  shader.hpp  shaderManager.hpp  skybox.hpp  texture.hpp  textureView.hpp
includes/components/: IBLData.hpp  cameraComponent.hpp  component.hpp  meshComponent.hpp  physicsComponent.hpp  scriptComponent.hpp  skyboxComponent.hpp  transformComponent.hpp
includes/components/lights/: directionalLightComponent.hpp  lightComponent.hpp  pointLightComponent.hpp  spotLightComponent.hpp
includes/game/: gameEngine.hpp  gameState.hpp  mainGameState.hpp  startMenuState.hpp
includes/io/: imguiConfig.hpp  input.hpp  interface.hpp
includes/lights/: lightManager.hpp  pointLight.hpp  spotLight.hpp
includes/materials/: material.hpp  pbrMaterial.hpp  phongMaterial.hpp
includes/physics/: boundingBox.hpp  collider.hpp  frustum.hpp  physicsWorld.hpp  plane.hpp
includes/utilities/: geometry.hpp  glad.h  resourceLoader.hpp
libs/: assimp-vc143-mtd.lib  glad.c  glfw3.lib
libs/lua-5.4.7/: CMakeLists.txt  Makefile
models/: Brave NoWebGL.lnk
models/boat/: license.txt  scene.gltf
models/car/: license.txt  scene.gltf
models/lightbulb/: license.txt  scene.gltf
models/tank/: license.txt  scene.gltf
src/: cubemap.cpp  entity.cpp  gameObject.cpp  input.cpp  interface.cpp  lightManager.cpp  logger.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  renderObject.cpp  renderTarget.cpp  renderer.cpp  scene.cpp  shader.cpp  shaderManager.cpp  skybox.cpp  texture.cpp
src/components/: IBLData.cpp  cameraComponent.cpp  meshComponent.cpp  physicsComponent.cpp  scriptComponent.cpp  skyboxComponent.cpp  transformComponent.cpp
src/components/lights/: directionalLightComponent.cpp  lightComponent.cpp  pointLightComponent.cpp  spotLightComponent.cpp
src/game/: gameEngine.cpp  mainGameState.cpp  startMenuState.cpp
src/headers/: camera.hpp  cubemap.hpp  gameObject.hpp  input.hpp  interface.hpp  main.hpp  material.hpp  mesh.hpp  model.hpp  renderObject.hpp  renderer.hpp  shader.hpp  skybox.hpp  texture.hpp
src/headers/io/: interface.hpp
src/headers/lights/: directionalLight.hpp  light.hpp  lightManager.hpp  pointLight.hpp  spotLight.hpp
src/io/: input.cpp  interface.cpp
src/lights/: directionalLight.cpp  light.cpp  lightManager.cpp  pointLight.cpp  spotLight.cpp
src/materials/: pbrMaterial.cpp  phongMaterial.cpp
src/physics/: physicsWorld.cpp
src/shaders/: brdf.frag  brdf.vert  cubemap.vert  depth.frag  depth.geom  depth.vert  equirectangularToCubeMap.frag  equirectangularToCubeMap.vert  fragment.glsl  gBuffer.frag  gBuffer.vert  grid.frag  grid.vert  grid2.frag  grid2.vert  irradiance.frag  light.vert  outline.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  prefilter.frag  shader1.vert  shader2.frag  skybox.frag  skybox.vert  solid.vert  ssao.frag  ssao.vert  ssaoBlur.frag  ssaoBlur.vert
src/utilities/: glad.c  resourceLoader.cpp  stb_image.cpp
